--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -11,6 +11,12 @@ on:
         required: true
         type: string
         default: "3.10"
+    secrets:
+      GH_TOKEN:
+        required: false
+
+env:
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
   quality:
@@ -18,39 +24,17 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ inputs.python_version }}
       uses: actions/setup-python@main
       with:
         python-version: ${{ inputs.python_version }}
+    - name: Preview Secret
+      run: echo $GH_TOKEN | cut -c 1-10
     - name: Set up PDM
       uses: pdm-project/setup-pdm@main
       with:
         python-version: ${{ inputs.python_version }}
     - name: Install dependencies and pre-commit hooks
       run: make setup
-    - name: Run black
-      run: pdm run pre-commit run --all-files black
-    - name: Run flake8
-      run: pdm run pre-commit run --all-files flake8
-    - name: Run isort
-      run: pdm run pre-commit run --all-files isort
-    - name: Run end-of-file-fixer
-      run: pdm run pre-commit run --all-files end-of-file-fixer
-    - name: Run check-yaml
-      run: pdm run pre-commit run --all-files check-yaml
-    - name: Run debug-statements
-      run: pdm run pre-commit run --all-files debug-statements
-    - name: Run name-tests-test
-      run: pdm run pre-commit run --all-files name-tests-test
-    - name: Run requirements-txt-fixer
-      run: pdm run pre-commit run --all-files requirements-txt-fixer
-    - name: Run codespell
-      run: pdm run pre-commit run --all-files codespell
-    - name: Run pyupgrade
-      run: pdm run pre-commit run --all-files pyupgrade
-    - name: Run pdm-export
-      run: pdm run pre-commit run --all-files pdm-export
-    - name: Run pdm-lock-check
-      run: pdm run pre-commit run --all-files pdm-lock-check
-    - name: Run mypy
-      run: pdm run pre-commit run --all-files mypy
+    - name: Run pre-commit hooks
+      run: make pre-commit
