--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -10,7 +10,7 @@ on:
       python_version:
         required: true
         type: string
-        default: "3.10"
+        default: "3.12"
     secrets:
       GH_TOKEN:
         required: false
@@ -28,8 +28,8 @@ jobs:
       uses: actions/setup-python@main
       with:
         python-version: ${{ inputs.python_version }}
-    - name: Preview Secret
-      run: echo $GH_TOKEN | cut -c 1-10
+    - name: Preview GitHub Token
+      run: echo $GH_TOKEN | sha256sum | cut -c 1-10
     - name: Set up PDM
       uses: pdm-project/setup-pdm@main
       with:
