--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,11 @@ on:
       python_version:
         required: true
         type: string
-        default: "3.10"
+        default: "3.12"
+      integration:
+        required: false
+        type: string
+        default: "false"
       end_to_end:
         required: false
         type: string
@@ -32,16 +36,19 @@ jobs:
       uses: actions/setup-python@main
       with:
         python-version: ${{ inputs.python_version }}
-    - name: Preview Secret
-      run: echo $GH_TOKEN | cut -c 1-10
+    - name: Preview GitHub Token
+      run: echo $GH_TOKEN | sha256sum | cut -c 1-10
     - name: Set up PDM
       uses: pdm-project/setup-pdm@main
       with:
         python-version: ${{ inputs.python_version }}
     - name: Install dependencies
       run: pdm sync
-    - name: Run tests
+    - name: Run unit tests
       run: make test
+    - name: Run integration tests
+      if: ${{ inputs.integration == 'true' }}
+      run: make integration-test
     - name: Run end-to-end tests
       if: ${{ inputs.end_to_end == 'true' }}
       run: make end-to-end-test
